# chimes_calculator

./: .gitignore  CMakeLists.txt  CODEOWNERS  LICENSE  NOTICE  README  README.md  config.cmake  install.sh  pull_request_template.md  uninstall.sh
.github/: CODEOWNERS  CODOWNDERS
.github/workflows/: ci.yml
chimesFF/: chimesFF.h
chimesFF/api/: chimescalc_C.cpp  chimescalc_C.h  chimescalc_F.f90  chimescalc_py.py  wrapper-C.cpp  wrapper-C.h  wrapper-F.F90  wrapper_py.py
chimesFF/examples/c/: .Makefile.swp  Makefile  README  main.c
chimesFF/examples/cpp/: Makefile  README  main.cpp
chimesFF/examples/fortran/: CMakeLists.txt  Makefile  README  main.F90
chimesFF/examples/python/: Makefile  README  main.py
chimesFF/src/: chimesFF.cpp  chimesFF.h  chimescalc.cpp
chimesFF/src/FP/: calc_histograms.cpp  chimesFF.cpp  chimesFF.h  cluster_combiner.cpp  combine_files.sh  histogram  multi_calc_histogram.cpp  post_process.sh  save_read_params.cpp
cmake/: ChimesCalc.cmake
cmake/export/: chimescalc-config.cmake.in
doc/: .readthedocs.yaml
doc/source/: chimesFF.rst  citing.rst  conf.py  contact.rst  contributing.rst  etc.rst  force_fields.rst  getting_started-LLNL-BB.rst  getting_started-Open-GH.rst  getting_started.rst  index.rst  legal.rst  quick_start.rst  releases.rst  serial_interface.rst  units.rst  utils.rst
etc/dftbplus/: install.sh
etc/dftbplus/doc/: quick_start_guide.txt
etc/dftbplus/etc/: chimesrep.F90  parser.F90
etc/lmp/: install.sh  uninstall.sh
etc/lmp/doc/: quick_start_guide.txt
etc/lmp/etc/: Makefile.mpi_chimes  Makefile.mpi_chimes.NREL-Kestrel  Makefile.mpi_chimes.UT-TACC  pair.cpp  pair.h
etc/lmp/modfiles/: JHU-ARCH.mod  LLNL-LC.mod  NREL-Kestrel.mod  UM-ARC.mod  UT-TACC.mod
etc/lmp/src/: pair_chimes.cpp  pair_chimes.h  save_pair.cpp  save_pair.h
etc/lmp/tests/: README  cleanup.sh  compare_fingerprints.py  compare_logfiles.py  create.sh  expected.out.lammps  run_tests.sh
modfiles/: JHU-ARCH.mod  LLNL-LC.mod  UM-ARC.mod
mpi_interface/api/: chimescalc_mpi_C.cpp  chimescalc_mpi_C.h  chimescalc_mpi_py.py
mpi_interface/examples/c/: Makefile  main.c  test.sh
mpi_interface/examples/cpp/: Makefile  main.cpp  test.sh
mpi_interface/examples/python/: Makefile  main.py  test.sh
mpi_interface/src/: mpi_chimes_interface.cpp  mpi_chimes_interface.h
serial_interface/api/: chimescalc_serial_C.cpp  chimescalc_serial_C.h  chimescalc_serial_F.f90  chimescalc_serial_F08.f90  chimescalc_serial_py.py  wrapper-C.cpp  wrapper-C.h  wrapper-F.F90  wrapper-F08.F90  wrapper_py.py
serial_interface/examples/c/: Makefile  main.c  test-C
serial_interface/examples/c_instance/: Makefile  main.c
serial_interface/examples/cpp/: Makefile  README  chimescalc  job.err  job.out  main.cpp  minfo.txt  nsight_batch.sh  test-CPP
serial_interface/examples/fortran/: Makefile  main.F90  test-F  wrapper.mod
serial_interface/examples/fortran08/: CMakeLists.txt  Makefile  main.F90
serial_interface/examples/fortran_instance/: .main.F90.swp  Makefile  main.F90
serial_interface/examples/python/: Makefile  README  main.py
serial_interface/examples/python_instance/: Makefile  main.py
serial_interface/src/: chimescalc_serial.cpp  chimescalc_serial.h  serial_chimes_interface.cpp  serial_chimes_interface.h
serial_interface/tests/: HN3.2gcc_3000K.OUTCAR_#000.xyz  compare.py  compare.sh  run.out  run_C_tio2-unit.out  run_abrg.sh  run_single_test.sh  run_test_case  run_tests.sh  run_tests2.sh  test  test-F  test.out  tests
serial_interface/tests/configurations/: CHON.testfile_#000.xyz  CO.2.5gcc_6500K.OUTCAR_#000.relabel.xyz  CO.2.5gcc_6500K.OUTCAR_#000.scramble.xyz  CO.2.5gcc_6500K.OUTCAR_#000.translate.xyz  CO.2.5gcc_6500K.OUTCAR_#000.xyz  CO.2.5gcc_6500K.OUTCAR_#001.xyz  CO.2.5gcc_6500K.OUTCAR_#002.xyz  CO.2.5gcc_6500K.OUTCAR_#003.xyz  CO.2.5gcc_6500K.OUTCAR_#004.xyz  CO.2.5gcc_6500K.OUTCAR_#005.xyz  CO.2.5gcc_6500K.OUTCAR_#006.xyz  CO.2.5gcc_6500K.OUTCAR_#007.xyz  CO.2.5gcc_6500K.OUTCAR_#008.xyz  CO.2.5gcc_6500K.OUTCAR_#009.xyz  CO.9GPa_2400K.OUTCAR_#000.xyz  H2O.1.50gcc_2000K_#000.xyz  HN3.2.04gcc_20000K_#000.xyz  HN3.2gcc_3000K.OUTCAR_#001.xyz  HN3.2gcc_3000K.OUTCAR_#002.xyz  HN3.2gcc_3000K.OUTCAR_#003.xyz  HN3.2gcc_3000K.OUTCAR_#004.xyz  HN3.2gcc_3000K.OUTCAR_#005.xyz  HN3.2gcc_3000K.OUTCAR_#006.xyz  HN3.2gcc_3000K.OUTCAR_#007.xyz  HN3.2gcc_3000K.OUTCAR_#008.xyz  HN3.2gcc_3000K.OUTCAR_#009.xyz  TiO2.unitcell_arbrot_#000.xyz  TiO2.unitcell_arbrot_#001.xyz  diam.16_#000.xyz  diam.2_#000.xyz  diam.64_#000.xyz  diam.8_#000.xyz  liqC.2.5gcc_6000K.OUTCAR_#000.xyz  liqC.2.5gcc_6000K.OUTCAR_#005.xyz  liqC.2.5gcc_6000K.OUTCAR_#006.xyz  liqC.2.5gcc_6000K.OUTCAR_#007.xyz  liqC.2.5gcc_6000K.OUTCAR_#008.xyz  (+1 more)
src/: chimesFF.cpp  chimesFF.h
tests/configurations/: CO.2.5gcc_6500K.OUTCAR_#000.relabel.xyzf  CO.2.5gcc_6500K.OUTCAR_#000.scramble.xyzf  CO.2.5gcc_6500K.OUTCAR_#000.translate.xyzf  CO.2.5gcc_6500K.OUTCAR_#001.xyzf  CO.2.5gcc_6500K.OUTCAR_#002.xyzf  CO.2.5gcc_6500K.OUTCAR_#003.xyzf  CO.2.5gcc_6500K.OUTCAR_#004.xyzf  CO.2.5gcc_6500K.OUTCAR_#005.xyzf  CO.2.5gcc_6500K.OUTCAR_#006.xyzf  CO.2.5gcc_6500K.OUTCAR_#007.xyzf  CO.2.5gcc_6500K.OUTCAR_#008.xyzf  CO.2.5gcc_6500K.OUTCAR_#009.xyzf  HN3.2gcc_3000K.OUTCAR_#000.xyzf  HN3.2gcc_3000K.OUTCAR_#001.xyzf  HN3.2gcc_3000K.OUTCAR_#002.xyzf  HN3.2gcc_3000K.OUTCAR_#003.xyzf  HN3.2gcc_3000K.OUTCAR_#004.xyzf  HN3.2gcc_3000K.OUTCAR_#005.xyzf  HN3.2gcc_3000K.OUTCAR_#006.xyzf  HN3.2gcc_3000K.OUTCAR_#007.xyzf  HN3.2gcc_3000K.OUTCAR_#008.xyzf  HN3.2gcc_3000K.OUTCAR_#009.xyzf  liqC.2.5gcc_6000K.OUTCAR_#002.xyzf  liqC.2.5gcc_6000K.OUTCAR_#003.xyzf  liqC.2.5gcc_6000K.OUTCAR_#005.xyzf  liqC.2.5gcc_6000K.OUTCAR_#006.xyzf  liqC.2.5gcc_6000K.OUTCAR_#009.xyzf
tests/force_fields/: published_params.HN3.2+3+4b.Tersoff.special.offsets.txt  published_params.ambH2O.2+3b.cubic.txt  published_params.liqC.2+3b.cubic.txt  published_params.liqC.2b.cubic.txt  published_params.liqC.2bsig.cubic.txt  published_params.liqC6000K.2+3b.cubic.txt  published_params.liqCO.2+3b.cubic.txt
util/: config.py
util/tabulator/: tabulator.py
(+623 files in other folders)
